Version 0.0.11
Fixed error in format string used in one of the example files.
Fixed error where double byte characters were being read incorrectly.

Version 0.0.10
Corrected Actual Start and Actual End fields from MPP file.
Fixed bug where time values were being broken by daylight saving time in the user's default locale.
Updated to extract the following fields from task data in an MPP file which were previously not imported:
	Actual Work, Baseline Work, Cost Variance, Deadline, Remaining Work, Work
Updated to extract the following fields from resource data in an MPP file which were previously not imported:
	Actual Cost, Actual Overtime Cost, Actual Work, Baseline Work, Cost, Cost Variance, Max Units, 
	Overtime Cost, Overtime Rate, Overtime Work, Peak, Regular work, Remaining Cost, Remaining 
	Overtime Cost, Remaining Work, Standard Rate, Work, Work Variance

Version 0.0.9
Fixed bug when handling certain types of modified MPP file where resources have been updated.
Added sample MPP files for bugs to the JUnit tests.
Added support for summary flag import from MPP files.
Added automatic summary flag update when creating an MPX file programatically.
Added new constructor to the MSPDIFile class to allow MSPDI files to be created from scratch.

Version 0.0.8
Added support for estimated durations.
Fixed bug in handling certain types of modified MPP file where tasks have been updated.
Added the facility to auto generate outline numbers.